src/content/docs/en/sdk/unity/v4/features/attribution.mdx
---
title: Get attribution information
description: Listen for attribution changes using the Adjust SDK
slug: en/sdk/unity/v4/features/attribution
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v5: /en/sdk/unity/features/attribution
---

When a user interacts with an Adjust link, their attribution information updates. This can happen if the user interacts with a [deep link](https://help.adjust.com/en/article/deep-links). Information about a user's attribution is represented in the `AdjustAttribution` class.

## AdjustAttribution class properties {#adjustattribution-class-properties}

The `AdjustAttribution` class contains details about the current attribution status of the device. Any values that aren't populated for the user are returned as a `null` value.

<Callout type="note">

The following values can only be accessed if the [`needsCost` property on your `AdjustConfig` instance](/en/sdk/android/configuration#enable-cost-data-sending) is `true`:

-  `costType`
-  `costAmount`
-  `costCurrency`

</Callout>

| Values              | Data type | Description                                                                                                      |
| ------------------- | --------- | ---------------------------------------------------------------------------------------------------------------- |
| `trackerToken`      | `string`  | The token of the link to which the device is currently attributed                                                |
| `trackerName`       | `string`  | The name of the link to which the device is currently attributed                                                 |
| `network`           | `string`  | The name of the network to which the device is currently attributed                                              |
| `campaign`          | `string`  | The name of the campaign to which the device is currently attributed                                             |
| `adgroup`           | `string`  | The name of the adgroup to which the device is currently attributed                                              |
| `creative`          | `string`  | The name of the creative to which the device is currently attributed                                             |
| `clickLabel`        | `string`  | The [click label](https://help.adjust.com/en/article/user-rewards) that the install is tagged with               |
| `adid`              | `string`  | The unique Adjust ID assigned to the device                                                                      |
| `costType`          | `string`  | The campaign pricing model (for example cpi)                                                                     |
| `costAmount`        | `double`  | The cost of the install.                                                                                         |
| `costCurrency`      | `string`  | The [3 character ISO 4217 code](https://www.iban.com/currency-codes) of the currency associated with the cost.   |
| `fbInstallReferrer` | `string`  | The [Facebook install referrer](https://developers.facebook.com/docs/app-ads/install-referrer/). _Android only_. |

## Trigger a function when attribution changes {#trigger-a-function-when-attribution-changes}

<CodeBlock title="Method signature">

```cs
public void setAttributionChangedDelegate(Action<AdjustAttribution> attributionChangedDelegate, string sceneName = "Adjust");
```

</CodeBlock>

The SDK can listen for attribution changes and call a function when it detects an update. To configure your callback function, call the `setAttributionChangedDelegate` method with your function name as an argument.

<Callout type="important">

You must call the `setAttributionChangedDelegate` method **before** initializing the Adjust SDK in your app.

</Callout>

<CodeBlock highlight="{range: 8}, {range: 13-16}">

```cs
using com.adjust.sdk;

public class ExampleGUI : MonoBehaviour {
   void OnGUI() {
      if (GUI.Button(new Rect(0, 0, Screen.width, Screen.height), "callback")) {
         AdjustConfig adjustConfig = new AdjustConfig("{Your App Token}", AdjustEnvironmentSandbox);
         adjustConfig.setLogLevel(AdjustLogLevel.Verbose);
         adjustConfig.setAttributionChangedDelegate(this.attributionChangedDelegate);
         Adjust.start(adjustConfig);
      }
   }

   public void attributionChangedDelegate(AdjustAttribution attribution) {
      Debug.Log("Attribution changed");
      // ...
   }
}
```

</CodeBlock>

## Get current attribution information {#get-current-attribution-information}

<CodeBlock title="Method signature">

```cs
public static AdjustAttribution getAttribution();
```

</CodeBlock>

When a user installs your app, Adjust attributes the install to a campaign. The Adjust SDK gives you access to campaign attribution details for your install. To return this information, call the `getAttribution` method to return the attribution information as an `AdjustAttribution` object.

```cs
var attribution = Adjust.getAttribution();
```
